--- a/style.scss
+++ b/style.scss
@@ -36,8 +36,19 @@ body {
   }
 }
 
+#sprite-previews {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
 .preview {
     width: 128px;
     height: 128px;
     image-rendering: pixelated;
+
+    & img {
+        width: 100%;
+        height: 100%;
+    }
 }
